# RAG_Chatbot

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  chat_cli.py  code_agent.py  eslint.config.js  pyproject.toml  rag_chat.py  requirements-test.txt  requirements.txt  run.py  start.bat
.github/: dependabot.yml
app/: __init__.py  agent.py  auth.py  config.py  db.py  defaults.py  doc_images.py  embeddings.py  export.py  fsbrowse.py  llm.py  loaders.py  logging_setup.py  main.py  ocr.py  postprocess.py  procedure.py  rag.py  retrieval.py  safety.py  splitter.py  sse.py  summarize.py
docs/: OCR_API.md  all-flows.html  architecture-map.html  architecture.md  auto_design.md  automa_design.md  chat-flow.html  code-roadmap.md  features.html  flows-interactive.html  roadmap.md
evalkit/: README.md  eval_set.example.json  inspect_chunks.py  metrics.py  run_eval.py
examples/: OcrClient.bas  ocr_client.py
tests/: run_all.py  test_agent_context.py  test_agent_http_e2e.py  test_agent_improve.py  test_agent_review.py  test_agent_subagent.py  test_agent_text_tools.py  test_agent_tools.py  test_agent_verify.py  test_chat_e2e.py  test_clarify.py  test_contextual.py  test_conversation_service.py  test_db.py  test_defaults.py  test_doc_images.py  test_doc_images_edge.py  test_eval_metrics.py  test_export.py  test_fsbrowse.py  test_index_service.py  test_lan_guard.py  test_llm_helpers.py  test_llm_rerank.py  test_observability.py  test_ocr.py  test_ocr_settings.py  test_postprocess.py  test_procedure.py  test_read_largefile.py  test_retrieval.py  test_splitter.py
(+37 files in other folders)
